-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 2
-
None
-
Windows
-
0aafef094df29d754eae683837444e74c4465dce
Full support for WM_XBUTTON* messages missing from Windows QPA plugin. E.g. autocapture doesn't recognize these buttons.
| For Gerrit Dashboard: QTBUG-27874 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 39088,1 | Windows: Add missing support for X-buttons. | master | qt/qtbase | Status: MERGED | +2 | 0 |
| 39781,1 | Windows: Add missing support for X-buttons. | winrt | qt/qtbase | Status: ABANDONED | 0 | 0 |